--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "dropzone": "^6.0.0-beta.2",
         "vue-router": "^4.2.4"
     }
 }
