--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "dropzone": "^6.0.0-beta.2",
-        "vue-router": "^4.2.4"
+        "vue-router": "^4.2.4",
+        "vue2-editor": "^2.10.3"
     }
 }
